--- a/Fashion_Admin/public/template/asset/css/style.css
+++ b/Fashion_Admin/public/template/asset/css/style.css
@@ -1202,3 +1202,163 @@ ul{
         transform: rotate(0deg);
     }
 }
+
+
+/* chat */
+
+.chat-widget {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 1000;
+}
+
+.chat-icon {
+    background-color: #ffa59d;
+    border-radius: 50%;
+    width: 55px;
+    height: 55px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.chat-icon img {
+    width: 30px;
+    height: 30px;
+    color: white;
+}
+
+.chat-window {
+    display: none;
+    position: absolute;
+    bottom: 70px;
+    right: 0;
+    width: 400px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    flex-direction: column;
+    background-color: #fff;
+}
+
+.chat-header {
+    background: #ffa59d;
+    color: #fff;
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 5px 5px 0 0;
+}
+
+.close-btn {
+    background: transparent;
+    border: none;
+    color: #fff;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+.chat-body {
+    padding: 10px;
+    height: 300px;
+    overflow-y: auto;
+    background: #f5f5f5;
+}
+
+.chat-footer {
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    border-top: 1px solid #ddd;
+}
+
+.chat-footer input {
+    flex: 1;
+    padding: 5px;
+    border: 1px solid #ddd;
+    border-radius: 3px;
+}
+
+.chat-footer button {
+    background-color: #ffa59d;
+    color: #fff;
+    border: none;
+    padding: 5px 10px;
+    margin-left: 10px;
+    border-radius: 3px;
+    cursor: pointer;
+}
+
+
+.message {
+    padding: 10px 5px;
+    line-height: 1.4rem;
+}
+.user_message{
+    text-align: right !important;
+    margin: 0 12px;
+    background: #eee;
+    border-radius: 10px;
+    padding: 5px 10px 5px 5px;
+}
+
+.admin_message{
+    text-align: left !important;
+    margin: 12px;
+    background: #d1e7dd;
+    border-radius: 10px;
+    padding: 5px 5px 5px 10px;
+
+}
+
+.chat-header-info {
+    display: flex;
+    align-items: center;
+}
+
+.message-time {
+    display: block;
+    font-size: 0.6em;
+    color: gray;
+    margin-top: 5px;
+}
+
+.handover-button {
+    background-color: #4caf50; /* Màu nền xanh lá */
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 5px 10px;
+    font-size: 14px;
+    cursor: pointer;
+    margin-right: 10px;
+}
+
+.hide {
+    display: none;
+}
+
+#admin-chat-btn{
+    display: flex;
+    width: 100%;
+}
+
+.message__containner{
+    margin: 25px 0;
+}
+.name-chat {
+    padding-right: 20px;
+    font-size: 0.8em;
+    font-weight: 600;
+    display: flex;
+    align-items: flex-end;
+    flex-direction: column;
+}
+
+button:disabled {
+    opacity: 0.5; 
+    cursor: not-allowed;
+}
